# FactorioCalc

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.rst  pyproject.toml  test.py
RecipeExporter/: control.lua  get-version  info.json  json.lua  mk-zip.py
docs/: .gitignore  ChangeLog.rst  Makefile  build-environment.yml  comparison.rst  conf.py  demo-prep.py  description.py  guide-nb.py  guide-proc.py  guide.rst  guide0.md  index.rst  readme.rst  reference.py  requirements.txt
docs/_static/css/: custom.css
factoriocalc/: __init__.py  _helper.py  _import_raw.py  blueprint.py  box.py  config.py  contextvars_.py  core.py  data.py  fracs.py  game-info-expensive.json  game-info-normal.json  game-info-v_1_1-expensive.json  game-info-v_1_1-normal.json  game-info-v_2_0-sa.json  game-info-v_2_0.json  helper.py  import_.py  itm.py  jsonconv.py  machine.py  machines.py  mch.py  mods.py  ordenum.py  presets.py  produce.py  rcp.py  solver.py  test_fracs.py  units.py
factoriocalc/rcpinst/: __init__.py  expensive.py
tests/: blueprint-book.txt  bp-iron-k.txt  bp-lithium-k.txt  circuits.txt  common.py  kr-recipes.json  sa.json  test_json.py  test_krastorio.py  test_rates.py  test_sa.py  test_solver.py  test_summarize.py
util/: decode-blueprint  encode-blueprint
