[build-system]
requires = ["setuptools>=61.0","setuptools-scm>=5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factoriocalc"
authors = [
  { name="Kevin Atkinson" },
]
description = "A python module to help you plan your factory for Factorio."
keywords = ["Factorio"]
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/FactorioCalc/FactorioCalc"
"Bug Tracker" = "https://github.com/FactorioCalc/FactorioCalc/issues"

[tool.setuptools]
packages = ["factoriocalc"]

[tool.setuptools.dynamic]
version = {attr = "factoriocalc.__version__"}
